manifests-online/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: online-demo
  namespace: online-demo
spec:
  type: ClusterIP
  selector:
    app: online-demo
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
